Tests/Error/Handling/.build/start.pr
{
  "name": "Start",
  "description": "No goal was provided. Please send the %goalForLlm% content (or describe the task you want completed) so I can generate the required JSON plan.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "write out \u0022Before error test\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022something went wrong\u0022, on error ignore",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 2,
      "text": "write out \u0022After ignored error - this should print\u0022",
      "lineNumber": 4,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 3,
      "text": "throw error \u0022expected failure\u0022 with status code 404",
      "lineNumber": 5,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Runtime2/Error/Handling/Start.goal",
  "prPath": "/Tests/Runtime2/Error/Handling/.build/start.pr",
  "hash": "a96260d1a54aa464354c1fe08bfc93e313b755f6038151d2994689831b159765",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}